--- a/frontend/src/OrgChart.css
+++ b/frontend/src/OrgChart.css
@@ -63,3 +63,82 @@
   color: #000;
   border: 2px solid #aaa;
 }
+
+@media (min-width: 600px) {
+  .subordinates {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
+
+/* Estilos para os ramos */
+.org-chart .connector::before {
+  content: "";
+  width: 2px;
+  height: 20px;
+  background-color: #333;
+  position: absolute;
+  top: -20px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.org-chart .connector::after {
+  content: "";
+  width: 100%;
+  height: 2px;
+  background-color: #333;
+  position: absolute;
+  top: -2px;
+  left: 0;
+}
+
+.org-chart .subordinates .connector {
+  position: relative;
+}
+
+.org-chart .subordinates > div:not(:last-child)::after {
+  content: "";
+  width: 2px;
+  height: 100%;
+  background-color: #333;
+  position: absolute;
+  top: 0;
+  right: 50%;
+  transform: translateX(50%);
+}
+
+.org-chart .subordinates > div:not(:last-child)::before {
+  content: "";
+  width: 50%;
+  height: 2px;
+  background-color: #333;
+  position: absolute;
+  top: 0;
+  right: 50%;
+  transform: translateX(50%);
+}
+
+.org-chart .subordinates > div:not(:first-child)::before {
+  content: "";
+  width: 50%;
+  height: 2px;
+  background-color: #333;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.org-chart .subordinates > div:first-child .connector::before {
+  display: none;
+}
+
+.org-chart .subordinates > div:first-child::before {
+  display: none;
+}
+
+.org-chart .subordinates > div:last-child .connector::after {
+  display: none;
+}
